# freertos-wind-turbine-monitoring-system

./: .gitignore  CMakeLists.txt  LEARNING_PLAN.md  LEARNING_PROGRESS.md  README.md  requirements.txt
config/: FreeRTOSConfig.h  app_config.h
docs/: DASHBOARD_GUIDE.md  FUTURE_ENHANCEMENTS.md
docs/capabilities/: 01_task_scheduling.md  02_interrupt_handling.md  03_queue_communication.md  04_mutex_protection.md  05_event_groups.md  06_memory_management.md  07_stack_overflow.md  08_power_management.md
examples/: CMakeLists.txt
examples/01_basic_tasks/: CMakeLists.txt  README.md  __cheatsheet__.md  main.c
examples/02_isr_demo/: CMakeLists.txt  README.md  __cheatsheet__.md  main.c
examples/03_producer_consumer/: CMakeLists.txt  README.md  __cheatsheet__.md  main.c
examples/04_shared_spi/: CMakeLists.txt  README.md  __cheatsheet__.md  main.c
examples/05_event_sync/: CMakeLists.txt  README.md  __cheatsheet__.md  main.c
examples/06_heap_demo/: CMakeLists.txt  README.md  __cheatsheet__.md  main.c
examples/07_stack_check/: CMakeLists.txt  README.md  __cheatsheet__.md  main.c
examples/08_power_save/: CMakeLists.txt  README.md  __cheatsheet__.md  main.c
scripts/: activate_env.sh  build.sh  clean.sh  install_dependencies.sh
src/: main.c  main.h
src/integrated/: CMakeLists.txt  README.md  main.c
src/integrated/common/: system_state.h
src/integrated/dashboard/: console.c  console.h
src/integrated/tasks/: anomaly_task.c  dashboard_task.c  network_task.c  safety_task.c  sensor_task.c
