cmake_minimum_required(VERSION 3.13)

# Examples for Wind Turbine Predictor

# Example 01: Basic Tasks
add_subdirectory(01_basic_tasks)

# Example 02: ISR Demo
add_subdirectory(02_isr_demo)

# Example 03: Producer-Consumer
add_subdirectory(03_producer_consumer)

# Example 04: Shared SPI with Mutex
add_subdirectory(04_shared_spi)

# Example 05: Event Synchronization
add_subdirectory(05_event_sync)

# Example 06: Heap Demo
add_subdirectory(06_heap_demo)

# Example 07: Stack Check
add_subdirectory(07_stack_check)

# Example 08: Power Management
add_subdirectory(08_power_save)